<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/dodgeball"
        android:textSize="48sp" />
    <Button
        android:id="@+id/start"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game"
        android:onClick="startGame"/>
    <Button
        android:id="@+id/scores"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/start"
        android:layout_centerHorizontal="true"
        android:text="@string/highscores" />
    <Button
        android:id="@+id/about"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scores"
        android:layout_centerHorizontal="true"
        android:text="@string/about"/>
</RelativeLayout>
