<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="0dp" >

    <TextView
        android:id="@+id/gameover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/gameover"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/namebox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameover"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/typename"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/send"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/namebox"
        android:layout_centerHorizontal="true"
        android:text="@string/OK"
        android:onClick="sendScore" />

</RelativeLayout>
